--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@koa/cors": "^2.2.3",
+    "axios": "^0.19.2",
     "basic-auth": "^2.0.1",
     "bcrypt": "^4.0.1",
     "jsonwebtoken": "^8.5.1",
